Fixed the quote title on mobile

--- a/scss/components/_quotes.scss
+++ b/scss/components/_quotes.scss
@@ -18,10 +18,20 @@
     padding: var(--spacer);
     border-radius: var(--radius);
   }
+  .flex-title {
+    display: flex;
+    @media (max-width: 50rem) {
+      .wrapper {
+        margin-left: 1.5rem;
+      }
+    }
+  }
   img {
     width: 3rem;
     border-radius: 50%;
-    margin-right: var(--spacer);
+    @media (min-width: 50em) {
+      margin-right: var(--spacer);
+    }
   }
   .name {
     font-weight: 700;
